// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Header BasicHeader smoke-test 1`] = `
<header class="nhsuk-header"
        role="banner"
>
  <div class="nhsuk-width-container nhsuk-header__container">
    <div class="nhsuk-header__logo">
      <a class="nhsuk-header__link"
         href="/"
         aria-label="NHS homepage"
      >
        <svg class="nhsuk-logo"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 40 16"
             height="40"
             width="100"
             aria-labelledby="nhsuk-logo_title"
        >
          <title id="nhsuk-logo_title">
            NHS Logo
          </title>
          <path class="nhsuk-logo__background"
                d="M0 0h40v16H0z"
                fill="#005eb8"
          >
          </path>
          <path class="nhsuk-logo__text"
                fill="#fff"
                d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"
          >
          </path>
        </svg>
      </a>
    </div>
    <div class="nhsuk-header__content">
      <div class="nhsuk-header__menu">
        <button class="nhsuk-header__menu-toggle"
                aria-controls="header-navigation"
                aria-expanded="false"
        >
          Menu
        </button>
      </div>
      <div class="nhsuk-header__search">
        <button class="nhsuk-header__search-toggle"
                aria-label="Open search"
                aria-expanded="false"
        >
          <svg class="nhsuk-icon nhsuk-icon__search"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 24 24"
               aria-hidden="true"
               height="27"
               width="27"
          >
            <path d="M19.71 18.29l-4.11-4.1a7 7 0 1 0-1.41 1.41l4.1 4.11a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 10a5 5 0 1 1 5 5 5 5 0 0 1-5-5z">
            </path>
          </svg>
          <span class="nhsuk-u-visually-hidden">
            Search
          </span>
        </button>
        <div class="nhsuk-header__search-wrap">
          <form class="nhsuk-header__search-form"
                method="get"
                role="search"
          >
            <label class="nhsuk-u-visually-hidden"
                   for="search-field"
            >
              Search the NHS website
            </label>
            <input class="nhsuk-search__input"
                   id="search-field"
                   role="search"
                   type="search"
                   autocomplete="off"
                   placeholder="Search"
            >
            <button class="nhsuk-search__submit"
                    type="submit"
            >
              <svg class="nhsuk-icon nhsuk-icon__search"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 24 24"
                   aria-hidden="true"
                   height="27"
                   width="27"
              >
                <path d="M19.71 18.29l-4.11-4.1a7 7 0 1 0-1.41 1.41l4.1 4.11a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 10a5 5 0 1 1 5 5 5 5 0 0 1-5-5z">
                </path>
              </svg>
              <span class="nhsuk-u-visually-hidden">
                Search
              </span>
            </button>
            <button class="nhsuk-search__close">
              <svg class="nhsuk-icon nhsuk-icon__close"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 24 24"
                   aria-hidden="true"
                   height="27"
                   width="27"
              >
                <path d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z">
                </path>
              </svg>
              <span class="nhsuk-u-visually-hidden">
                Close search
              </span>
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
  <nav class="nhsuk-header__navigation"
       id="header-navigation"
  >
    <div class="nhsuk-width-container">
      <p class="nhsuk-header__navigation-title">
        <span>
          Menu
        </span>
        <button class="nhsuk-header__navigation-close"
                type="button"
        >
          <svg class="nhsuk-icon nhsuk-icon__close"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 24 24"
               aria-hidden="true"
               height="34"
               width="34"
          >
            <path d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z">
            </path>
          </svg>
          <span class="nhsuk-u-visually-hidden">
            Close menu
          </span>
        </button>
      </p>
      <ul class="nhsuk-header__navigation-list">
        <li class="nhsuk-header__navigation-item nhsuk-header__navigation-item--for-mobile">
          <a class="nhsuk-header__navigation-link"
             href="/"
          >
            Home
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link"
             href="/conditions"
          >
            Health A-Z
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link"
             href="/live-well"
          >
            Live Well
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link"
             href="/social-care-and-support"
          >
            Care and support
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link"
             href="/news"
          >
            Health news
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link"
             href="/service-search"
          >
            Services near you
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</header>
`;

exports[`Components/Header HeaderWithCustomNavItemComponent smoke-test 1`] = `
<header class="nhsuk-header nhsuk-header--organisation nhsuk-header--white"
        role="banner"
>
  <div class="nhsuk-width-container nhsuk-header__container">
    <div class="nhsuk-header__logo">
      <a class="nhsuk-header__link"
         href="/"
      >
        <svg class="nhsuk-logo"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 40 16"
             aria-labelledby="nhsuk-logo_title"
        >
          <title id="nhsuk-logo_title">
          </title>
          <path class="nhsuk-logo__background"
                d="M0 0h40v16H0z"
          >
          </path>
          <path class="nhsuk-logo__text"
                d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"
          >
          </path>
        </svg>
        <span class="nhsuk-organisation-name">
          Anytown Anyplace
          <span class="nhsuk-organisation-name-split">
            Anywhere
          </span>
        </span>
        <span class="nhsuk-organisation-descriptor">
          NHS Foundation Trust
        </span>
      </a>
    </div>
    <div class="nhsuk-header__content">
      <div class="nhsuk-header__menu">
        <button class="nhsuk-header__menu-toggle"
                aria-controls="header-navigation"
                aria-expanded="false"
        >
          Menu
        </button>
      </div>
      <div class="nhsuk-header__search">
        <button class="nhsuk-header__search-toggle"
                aria-label="Open search"
                aria-expanded="false"
        >
          <svg class="nhsuk-icon nhsuk-icon__search"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 24 24"
               aria-hidden="true"
               height="27"
               width="27"
          >
            <path d="M19.71 18.29l-4.11-4.1a7 7 0 1 0-1.41 1.41l4.1 4.11a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 10a5 5 0 1 1 5 5 5 5 0 0 1-5-5z">
            </path>
          </svg>
          <span class="nhsuk-u-visually-hidden">
            Search
          </span>
        </button>
        <div class="nhsuk-header__search-wrap">
          <form class="nhsuk-header__search-form"
                method="get"
                role="search"
          >
            <label class="nhsuk-u-visually-hidden"
                   for="search-field"
            >
              Search the NHS website
            </label>
            <input class="nhsuk-search__input"
                   id="search-field"
                   role="search"
                   type="search"
                   autocomplete="off"
                   placeholder="Search"
            >
            <button class="nhsuk-search__submit"
                    type="submit"
            >
              <svg class="nhsuk-icon nhsuk-icon__search"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 24 24"
                   aria-hidden="true"
                   height="27"
                   width="27"
              >
                <path d="M19.71 18.29l-4.11-4.1a7 7 0 1 0-1.41 1.41l4.1 4.11a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 10a5 5 0 1 1 5 5 5 5 0 0 1-5-5z">
                </path>
              </svg>
              <span class="nhsuk-u-visually-hidden">
                Search
              </span>
            </button>
            <button class="nhsuk-search__close">
              <svg class="nhsuk-icon nhsuk-icon__close"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 24 24"
                   aria-hidden="true"
                   height="27"
                   width="27"
              >
                <path d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z">
                </path>
              </svg>
              <span class="nhsuk-u-visually-hidden">
                Close search
              </span>
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
  <nav class="nhsuk-header__navigation"
       id="header-navigation"
  >
    <div class="nhsuk-width-container">
      <p class="nhsuk-header__navigation-title">
        <span>
          Menu
        </span>
        <button class="nhsuk-header__navigation-close"
                type="button"
        >
          <svg class="nhsuk-icon nhsuk-icon__close"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 24 24"
               aria-hidden="true"
               height="34"
               width="34"
          >
            <path d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z">
            </path>
          </svg>
          <span class="nhsuk-u-visually-hidden">
            Close menu
          </span>
        </button>
      </p>
      <ul class="nhsuk-header__navigation-list">
        <li class="nhsuk-header__navigation-item">
          <div class="nhsuk-header__navigation-link"
               to="/"
          >
            Link to props
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </div>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link">
            Your hospital visit
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link">
            Wards and departments
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</header>
`;

exports[`Components/Header HeaderWithCustomNavMenuCloseAndNavItemListComponent smoke-test 1`] = `
<header class="nhsuk-header nhsuk-header--organisation nhsuk-header--white"
        role="banner"
>
  <div class="nhsuk-width-container nhsuk-header__container">
    <div class="nhsuk-header__logo">
      <a class="nhsuk-header__link"
         href="/"
      >
        <svg class="nhsuk-logo"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 40 16"
             aria-labelledby="nhsuk-logo_title"
        >
          <title id="nhsuk-logo_title">
          </title>
          <path class="nhsuk-logo__background"
                d="M0 0h40v16H0z"
          >
          </path>
          <path class="nhsuk-logo__text"
                d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"
          >
          </path>
        </svg>
        <span class="nhsuk-organisation-name">
          Anytown Anyplace
          <span class="nhsuk-organisation-name-split">
            Anywhere
          </span>
        </span>
        <span class="nhsuk-organisation-descriptor">
          NHS Foundation Trust
        </span>
      </a>
    </div>
    <div class="nhsuk-header__content">
      <div class="nhsuk-header__menu">
        <button class="nhsuk-header__menu-toggle"
                aria-controls="header-navigation"
                aria-expanded="false"
        >
          Menu
        </button>
      </div>
      <div class="nhsuk-header__search">
        <button class="nhsuk-header__search-toggle"
                aria-label="Open search"
                aria-expanded="false"
        >
          <svg class="nhsuk-icon nhsuk-icon__search"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 24 24"
               aria-hidden="true"
               height="27"
               width="27"
          >
            <path d="M19.71 18.29l-4.11-4.1a7 7 0 1 0-1.41 1.41l4.1 4.11a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 10a5 5 0 1 1 5 5 5 5 0 0 1-5-5z">
            </path>
          </svg>
          <span class="nhsuk-u-visually-hidden">
            Search
          </span>
        </button>
        <div class="nhsuk-header__search-wrap">
          <form class="nhsuk-header__search-form"
                method="get"
                role="search"
          >
            <label class="nhsuk-u-visually-hidden"
                   for="search-field"
            >
              Search the NHS website
            </label>
            <input class="nhsuk-search__input"
                   id="search-field"
                   role="search"
                   type="search"
                   autocomplete="off"
                   placeholder="Search"
            >
            <button class="nhsuk-search__submit"
                    type="submit"
            >
              <svg class="nhsuk-icon nhsuk-icon__search"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 24 24"
                   aria-hidden="true"
                   height="27"
                   width="27"
              >
                <path d="M19.71 18.29l-4.11-4.1a7 7 0 1 0-1.41 1.41l4.1 4.11a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 10a5 5 0 1 1 5 5 5 5 0 0 1-5-5z">
                </path>
              </svg>
              <span class="nhsuk-u-visually-hidden">
                Search
              </span>
            </button>
            <button class="nhsuk-search__close">
              <svg class="nhsuk-icon nhsuk-icon__close"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 24 24"
                   aria-hidden="true"
                   height="27"
                   width="27"
              >
                <path d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z">
                </path>
              </svg>
              <span class="nhsuk-u-visually-hidden">
                Close search
              </span>
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
  <nav class="nhsuk-header__navigation"
       id="header-navigation"
  >
    <div class="nhsuk-width-container">
      <p class="nhsuk-header__navigation-title">
        <span>
          Menu
        </span>
        <button class="nhsuk-header__navigation-close"
                type="button"
        >
          <svg class="nhsuk-icon nhsuk-icon__close"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 24 24"
               aria-hidden="true"
               height="34"
               width="34"
          >
            <path d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z">
            </path>
          </svg>
          <span class="nhsuk-u-visually-hidden">
            Close menu
          </span>
        </button>
      </p>
      <ul class="nhsuk-header__navigation-list">
        <li class="nhsuk-header__navigation-item nhsuk-header__navigation-item--for-mobile">
          <a class="nhsuk-header__navigation-link"
             href="/"
          >
            Home
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link"
             href="/conditions"
          >
            Health A-Z
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link"
             href="/live-well"
          >
            Live Well
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link"
             href="/social-care-and-support"
          >
            Care and support
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link"
             href="/news"
          >
            Health news
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link"
             href="/service-search"
          >
            Services near you
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</header>
`;

exports[`Components/Header HeaderWithLogo smoke-test 1`] = `
<header class="nhsuk-header"
        role="banner"
>
  <div class="nhsuk-width-container nhsuk-header__container">
    <div class="nhsuk-header__logo nhsuk-header__logo--only">
      <a class="nhsuk-header__link"
         href="/"
         aria-label="NHS homepage"
      >
        <svg class="nhsuk-logo"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 40 16"
             height="40"
             width="100"
             aria-labelledby="nhsuk-logo_title"
        >
          <title id="nhsuk-logo_title">
            NHS Logo
          </title>
          <path class="nhsuk-logo__background"
                d="M0 0h40v16H0z"
                fill="#005eb8"
          >
          </path>
          <path class="nhsuk-logo__text"
                fill="#fff"
                d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"
          >
          </path>
        </svg>
      </a>
    </div>
  </div>
</header>
`;

exports[`Components/Header HeaderWithNavigation smoke-test 1`] = `
<header class="nhsuk-header"
        role="banner"
>
  <div class="nhsuk-width-container nhsuk-header__container">
    <div class="nhsuk-header__logo">
      <a class="nhsuk-header__link"
         href="/"
         aria-label="NHS homepage"
      >
        <svg class="nhsuk-logo"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 40 16"
             height="40"
             width="100"
             aria-labelledby="nhsuk-logo_title"
        >
          <title id="nhsuk-logo_title">
            NHS Logo
          </title>
          <path class="nhsuk-logo__background"
                d="M0 0h40v16H0z"
                fill="#005eb8"
          >
          </path>
          <path class="nhsuk-logo__text"
                fill="#fff"
                d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"
          >
          </path>
        </svg>
      </a>
    </div>
    <div class="nhsuk-header__content">
      <div class="nhsuk-header__menu">
        <button class="nhsuk-header__menu-toggle"
                aria-controls="header-navigation"
                aria-expanded="false"
        >
          Menu
        </button>
      </div>
    </div>
  </div>
  <nav class="nhsuk-header__navigation"
       id="header-navigation"
  >
    <div class="nhsuk-width-container">
      <p class="nhsuk-header__navigation-title">
        <span>
          Menu
        </span>
        <button class="nhsuk-header__navigation-close"
                type="button"
        >
          <svg class="nhsuk-icon nhsuk-icon__close"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 24 24"
               aria-hidden="true"
               height="34"
               width="34"
          >
            <path d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z">
            </path>
          </svg>
          <span class="nhsuk-u-visually-hidden">
            Close menu
          </span>
        </button>
      </p>
      <ul class="nhsuk-header__navigation-list">
        <li class="nhsuk-header__navigation-item nhsuk-header__navigation-item--for-mobile">
          <a class="nhsuk-header__navigation-link"
             href="/"
          >
            Home
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link"
             href="/conditions"
          >
            Health A-Z
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link"
             href="/live-well"
          >
            Live Well
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link"
             href="/social-care-and-support"
          >
            Care and support
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link"
             href="/news"
          >
            Health news
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link"
             href="/service-search"
          >
            Services near you
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</header>
`;

exports[`Components/Header HeaderWithSearch smoke-test 1`] = `
<header class="nhsuk-header"
        role="banner"
>
  <div class="nhsuk-width-container nhsuk-header__container">
    <div class="nhsuk-header__logo">
      <a class="nhsuk-header__link"
         href="/"
         aria-label="NHS homepage"
      >
        <svg class="nhsuk-logo"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 40 16"
             height="40"
             width="100"
             aria-labelledby="nhsuk-logo_title"
        >
          <title id="nhsuk-logo_title">
            NHS Logo
          </title>
          <path class="nhsuk-logo__background"
                d="M0 0h40v16H0z"
                fill="#005eb8"
          >
          </path>
          <path class="nhsuk-logo__text"
                fill="#fff"
                d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"
          >
          </path>
        </svg>
      </a>
    </div>
    <div class="nhsuk-header__content">
      <div class="nhsuk-header__search">
        <button class="nhsuk-header__search-toggle"
                aria-label="Open search"
                aria-expanded="false"
        >
          <svg class="nhsuk-icon nhsuk-icon__search"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 24 24"
               aria-hidden="true"
               height="27"
               width="27"
          >
            <path d="M19.71 18.29l-4.11-4.1a7 7 0 1 0-1.41 1.41l4.1 4.11a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 10a5 5 0 1 1 5 5 5 5 0 0 1-5-5z">
            </path>
          </svg>
          <span class="nhsuk-u-visually-hidden">
            Search
          </span>
        </button>
        <div class="nhsuk-header__search-wrap">
          <form class="nhsuk-header__search-form"
                method="get"
                role="search"
          >
            <label class="nhsuk-u-visually-hidden"
                   for="search-field"
            >
              Search the NHS website
            </label>
            <input class="nhsuk-search__input"
                   id="search-field"
                   role="search"
                   type="search"
                   autocomplete="off"
                   placeholder="Search"
            >
            <button class="nhsuk-search__submit"
                    type="submit"
            >
              <svg class="nhsuk-icon nhsuk-icon__search"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 24 24"
                   aria-hidden="true"
                   height="27"
                   width="27"
              >
                <path d="M19.71 18.29l-4.11-4.1a7 7 0 1 0-1.41 1.41l4.1 4.11a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 10a5 5 0 1 1 5 5 5 5 0 0 1-5-5z">
                </path>
              </svg>
              <span class="nhsuk-u-visually-hidden">
                Search
              </span>
            </button>
            <button class="nhsuk-search__close">
              <svg class="nhsuk-icon nhsuk-icon__close"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 24 24"
                   aria-hidden="true"
                   height="27"
                   width="27"
              >
                <path d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z">
                </path>
              </svg>
              <span class="nhsuk-u-visually-hidden">
                Close search
              </span>
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`Components/Header OrganisationalHeader smoke-test 1`] = `
<header class="nhsuk-header nhsuk-header--organisation"
        role="banner"
>
  <div class="nhsuk-width-container nhsuk-header__container">
    <div class="nhsuk-header__logo">
      <a class="nhsuk-header__link"
         href="/"
      >
        <svg class="nhsuk-logo"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 40 16"
             aria-labelledby="nhsuk-logo_title"
        >
          <title id="nhsuk-logo_title">
          </title>
          <path class="nhsuk-logo__background"
                d="M0 0h40v16H0z"
          >
          </path>
          <path class="nhsuk-logo__text"
                d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"
          >
          </path>
        </svg>
        <span class="nhsuk-organisation-name">
          Anytown Anyplace
          <span class="nhsuk-organisation-name-split">
            Anywhere
          </span>
        </span>
        <span class="nhsuk-organisation-descriptor">
          NHS Foundation Trust
        </span>
      </a>
    </div>
    <div class="nhsuk-header__content">
      <div class="nhsuk-header__menu">
        <button class="nhsuk-header__menu-toggle"
                aria-controls="header-navigation"
                aria-expanded="false"
        >
          Menu
        </button>
      </div>
      <div class="nhsuk-header__search">
        <button class="nhsuk-header__search-toggle"
                aria-label="Open search"
                aria-expanded="false"
        >
          <svg class="nhsuk-icon nhsuk-icon__search"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 24 24"
               aria-hidden="true"
               height="27"
               width="27"
          >
            <path d="M19.71 18.29l-4.11-4.1a7 7 0 1 0-1.41 1.41l4.1 4.11a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 10a5 5 0 1 1 5 5 5 5 0 0 1-5-5z">
            </path>
          </svg>
          <span class="nhsuk-u-visually-hidden">
            Search
          </span>
        </button>
        <div class="nhsuk-header__search-wrap">
          <form class="nhsuk-header__search-form"
                method="get"
                role="search"
          >
            <label class="nhsuk-u-visually-hidden"
                   for="search-field"
            >
              Search the NHS website
            </label>
            <input class="nhsuk-search__input"
                   id="search-field"
                   role="search"
                   type="search"
                   autocomplete="off"
                   placeholder="Search"
            >
            <button class="nhsuk-search__submit"
                    type="submit"
            >
              <svg class="nhsuk-icon nhsuk-icon__search"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 24 24"
                   aria-hidden="true"
                   height="27"
                   width="27"
              >
                <path d="M19.71 18.29l-4.11-4.1a7 7 0 1 0-1.41 1.41l4.1 4.11a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 10a5 5 0 1 1 5 5 5 5 0 0 1-5-5z">
                </path>
              </svg>
              <span class="nhsuk-u-visually-hidden">
                Search
              </span>
            </button>
            <button class="nhsuk-search__close">
              <svg class="nhsuk-icon nhsuk-icon__close"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 24 24"
                   aria-hidden="true"
                   height="27"
                   width="27"
              >
                <path d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z">
                </path>
              </svg>
              <span class="nhsuk-u-visually-hidden">
                Close search
              </span>
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
  <nav class="nhsuk-header__navigation"
       id="header-navigation"
  >
    <div class="nhsuk-width-container">
      <p class="nhsuk-header__navigation-title">
        <span>
          Menu
        </span>
        <button class="nhsuk-header__navigation-close"
                type="button"
        >
          <svg class="nhsuk-icon nhsuk-icon__close"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 24 24"
               aria-hidden="true"
               height="34"
               width="34"
          >
            <path d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z">
            </path>
          </svg>
          <span class="nhsuk-u-visually-hidden">
            Close menu
          </span>
        </button>
      </p>
      <ul class="nhsuk-header__navigation-list">
        <li class="nhsuk-header__navigation-item nhsuk-header__navigation-item--for-mobile">
          <a class="nhsuk-header__navigation-link"
             href="/"
          >
            Home
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link">
            Your hospital visit
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link">
            Wards and departments
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link">
            Conditions and treatments
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link">
            Our people
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link">
            Our research
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</header>
`;

exports[`Components/Header OrganisationalHeaderWithWhiteHeader smoke-test 1`] = `
<header class="nhsuk-header nhsuk-header--organisation nhsuk-header--white"
        role="banner"
>
  <div class="nhsuk-width-container nhsuk-header__container">
    <div class="nhsuk-header__logo">
      <a class="nhsuk-header__link"
         href="/"
      >
        <svg class="nhsuk-logo"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 40 16"
             aria-labelledby="nhsuk-logo_title"
        >
          <title id="nhsuk-logo_title">
          </title>
          <path class="nhsuk-logo__background"
                d="M0 0h40v16H0z"
          >
          </path>
          <path class="nhsuk-logo__text"
                d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"
          >
          </path>
        </svg>
        <span class="nhsuk-organisation-name">
          Anytown Anyplace
          <span class="nhsuk-organisation-name-split">
            Anywhere
          </span>
        </span>
        <span class="nhsuk-organisation-descriptor">
          NHS Foundation Trust
        </span>
      </a>
    </div>
    <div class="nhsuk-header__content">
      <div class="nhsuk-header__menu">
        <button class="nhsuk-header__menu-toggle"
                aria-controls="header-navigation"
                aria-expanded="false"
        >
          Menu
        </button>
      </div>
      <div class="nhsuk-header__search">
        <button class="nhsuk-header__search-toggle"
                aria-label="Open search"
                aria-expanded="false"
        >
          <svg class="nhsuk-icon nhsuk-icon__search"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 24 24"
               aria-hidden="true"
               height="27"
               width="27"
          >
            <path d="M19.71 18.29l-4.11-4.1a7 7 0 1 0-1.41 1.41l4.1 4.11a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 10a5 5 0 1 1 5 5 5 5 0 0 1-5-5z">
            </path>
          </svg>
          <span class="nhsuk-u-visually-hidden">
            Search
          </span>
        </button>
        <div class="nhsuk-header__search-wrap">
          <form class="nhsuk-header__search-form"
                method="get"
                role="search"
          >
            <label class="nhsuk-u-visually-hidden"
                   for="search-field"
            >
              Search the NHS website
            </label>
            <input class="nhsuk-search__input"
                   id="search-field"
                   role="search"
                   type="search"
                   autocomplete="off"
                   placeholder="Search"
            >
            <button class="nhsuk-search__submit"
                    type="submit"
            >
              <svg class="nhsuk-icon nhsuk-icon__search"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 24 24"
                   aria-hidden="true"
                   height="27"
                   width="27"
              >
                <path d="M19.71 18.29l-4.11-4.1a7 7 0 1 0-1.41 1.41l4.1 4.11a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 10a5 5 0 1 1 5 5 5 5 0 0 1-5-5z">
                </path>
              </svg>
              <span class="nhsuk-u-visually-hidden">
                Search
              </span>
            </button>
            <button class="nhsuk-search__close">
              <svg class="nhsuk-icon nhsuk-icon__close"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 24 24"
                   aria-hidden="true"
                   height="27"
                   width="27"
              >
                <path d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z">
                </path>
              </svg>
              <span class="nhsuk-u-visually-hidden">
                Close search
              </span>
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
  <nav class="nhsuk-header__navigation"
       id="header-navigation"
  >
    <div class="nhsuk-width-container">
      <p class="nhsuk-header__navigation-title">
        <span>
          Menu
        </span>
        <button class="nhsuk-header__navigation-close"
                type="button"
        >
          <svg class="nhsuk-icon nhsuk-icon__close"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 24 24"
               aria-hidden="true"
               height="34"
               width="34"
          >
            <path d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z">
            </path>
          </svg>
          <span class="nhsuk-u-visually-hidden">
            Close menu
          </span>
        </button>
      </p>
      <ul class="nhsuk-header__navigation-list">
        <li class="nhsuk-header__navigation-item nhsuk-header__navigation-item--for-mobile">
          <a class="nhsuk-header__navigation-link"
             href="/"
          >
            Home
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link">
            Your hospital visit
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link">
            Wards and departments
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link">
            Conditions and treatments
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link">
            Our people
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
        <li class="nhsuk-header__navigation-item">
          <a class="nhsuk-header__navigation-link">
            Our research
            <svg class="nhsuk-icon nhsuk-icon__chevron-right"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
                 aria-hidden="true"
                 height="34"
                 width="34"
            >
              <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z">
              </path>
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</header>
`;

exports[`Components/Header TransactionalHeader smoke-test 1`] = `
<header class="nhsuk-header nhsuk-header--transactional"
        role="banner"
>
  <div class="nhsuk-width-container nhsuk-header__container">
    <div class="nhsuk-header__logo nhsuk-header__logo--only">
      <a class="nhsuk-header__link"
         href="/"
         aria-label="NHS homepage"
      >
        <svg class="nhsuk-logo"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 40 16"
             height="40"
             width="100"
             aria-labelledby="nhsuk-logo_title"
        >
          <title id="nhsuk-logo_title">
            NHS Logo
          </title>
          <path class="nhsuk-logo__background"
                d="M0 0h40v16H0z"
                fill="#005eb8"
          >
          </path>
          <path class="nhsuk-logo__text"
                fill="#fff"
                d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"
          >
          </path>
        </svg>
      </a>
    </div>
  </div>
</header>
`;

exports[`Components/Header TransactionalHeaderWithServiceName smoke-test 1`] = `
<header class="nhsuk-header nhsuk-header--transactional"
        role="banner"
>
  <div class="nhsuk-width-container nhsuk-header__container">
    <div class="nhsuk-header__logo nhsuk-header__logo--only">
      <a class="nhsuk-header__link"
         href="/"
         aria-label="NHS homepage"
      >
        <svg class="nhsuk-logo"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 40 16"
             height="40"
             width="100"
             aria-labelledby="nhsuk-logo_title"
        >
          <title id="nhsuk-logo_title">
            NHS Logo
          </title>
          <path class="nhsuk-logo__background"
                d="M0 0h40v16H0z"
                fill="#005eb8"
          >
          </path>
          <path class="nhsuk-logo__text"
                fill="#fff"
                d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"
          >
          </path>
        </svg>
      </a>
    </div>
    <div class="nhsuk-header__transactional-service-name">
      <a class="nhsuk-header__transactional-service-name--link"
         href="/"
      >
        Register with a GP
      </a>
    </div>
  </div>
</header>
`;
